# gemini-dreams

./: .gitignore  CLAUDE.md  Dockerfile  MACOS_SETUP.md  README.md  api.py  com.gemini.nightly.dream.plist  config.json  config_loader.py  dream_dashboard.py  dream_hook.py  dream_runner.py  eval_checker.py  native_log_hook.py  patch_charts.py  setup_hooks.py  simulate_interactions.py  test_config.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js  style.css
gemini-dreams-system/: agents.md  api.py  config.json  dream.py  dream_dashboard.py  dream_runner.py  pyproject.toml  setup_hooks.py
gemini-dreams-system/frontend/src/: main.js
gemini-dreams-system/skills/dream-analyzer/: SKILL.md
